Fix horizontal scrollable on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -415,10 +415,6 @@ div.container {
     margin-left: 0px;
     margin-right: 0px;
   }
-  .col-sm-12, .col-sm-6 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
 }
 
 .pac-container, .pac-item {
@@ -708,4 +704,8 @@ body {
   -moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
+}
+
+.form-container {
+  margin-bottom: 30px;
 }
